--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,10 @@ body,
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+/* 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px rgba(56, 9, 102, 1) inset !important;
+} */
